--- a/privacy4androidapps.html
+++ b/privacy4androidapps.html
@@ -21,7 +21,7 @@ SENSITIVE INFORMATION
 We ask that you not send us, and you not disclose, any sensitive Personal Information (e.g., information related to racial or ethnic origin, political opinions, religion or other beliefs, health, sexual orientation, criminal background or membership in past organizations, including trade union memberships) on or through an Application, the Services or the Site or otherwise to us.
 
 CHANGES TO OUR PRIVACY POLICY
-This Privacy Policy may be updated from time to time for any reason. We will notify you of any changes to our Privacy Policy by posting the new Privacy Policy on https://github.com/suneethamarthala/privacy/privacy4androidapps.html. Your continued use of the Apps and Services following the posting of changes will mean you accept those changes. 
+This Privacy Policy may be updated from time to time for any reason. We will notify you of any changes to our Privacy Policy by posting the new Privacy Policy on https://raw.githubusercontent.com/suneethamarthala/privacy/privacy/privacy4androidapps.html. Your continued use of the Apps and Services following the posting of changes will mean you accept those changes. 
 
 CONTACT US
 If you have any questions regarding privacy while using the Apps, or have questions about our practices, please contact us via email at mailto.suneethab@gmail.com
